# Zulip-Moderation-AI-Bot

./: .env.example  .gitignore  Chameleon_deploy.ipynb  Dockerfile  Dockerfile.data  Dockerfile.gpu-service  Dockerfile.serving  Dockerfile.training  README.md  demo.csv  evaluate.sh  instructions.md  pyproject.toml  requirements.txt  serving_config.yaml  system_flow.md
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml
config/: docker-compose-mlflow.yaml  pipeline.yaml
configs/: experiments.yaml
docker/: .env.example  Dockerfile.api  docker-compose.yaml
docker/ge-viewer/: Dockerfile  app.py  requirements.txt
docker/init_sql/: 00_create_tables.sql  01_seed_data.sql
infra/ansible/: install_k3s.yml  inventory.yml  post_k8s.yml  pre_k8s.yml
infra/k8s/: namespaces.yaml
infra/terraform/: data.tf  main.tf  outputs.tf  provider.tf  variables.tf  versions.tf
outputs/tfidf_logreg/: final_metrics.json  thresholds.json
scripts/: retrain_latest.sh  send_test_messages.py  setup_cron.sh  split_data.py  train.py
services/chatsentry/: Dockerfile
services/inference/: Dockerfile  main.py  monitor.py
services/zulip-bot/: bot.py
src/: data.py  main.py  metrics.py  models.py
src/api/: main.py  middleware.py  models.py
src/data/: compile_training_data.py  data_quality.py  drift_monitor.py  ingest_and_expand.py  prompts.py  synthetic_generator.py  text_cleaner.py  training_snapshot_trigger.py
src/gpu_service/: __init__.py  (+4 more)
tests/: conftest.py  test_api_health.py  test_compile_training_data.py  test_config.py  test_csv_chunking.py  test_dashboard.py  test_data_quality.py  test_ingest_and_expand.py  test_middleware.py  test_minio_buckets.py  test_minio_upload.py  test_schema.py  test_synthetic_gen.py  test_text_cleaner.py  test_traffic_generator.py
train/: Dockerfile  requirements.txt
(+54 files in other folders)
